--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ body {
     align-items: center;
     width: 100%;
     flex-grow: 1;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 20px;
+    border-radius: 10px;
 }
 
 header {
