--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,6 @@ body {
     align-items: center;
     width: 100%;
     flex-grow: 1;
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 20px;
-    border-radius: 10px;
 }
 
 header {
@@ -34,7 +30,6 @@ header {
     text-align: center;
     width: 100%;
     flex-shrink: 0; 
-    min-height: 10vh;
 }
 
 footer {
@@ -69,6 +64,14 @@ label, input {
 }
 
 
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -80,9 +83,15 @@ nav ul {
 
 nav ul li {
     margin: 0 15px;
+
 }
 
 nav ul li a {
     color: #fff;
+    text-decoration: none;
+}
+
+nav ul li a.active {
+    color: darkgrey;
     text-decoration: none;
 }
