--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,14 +49,49 @@ h2 {
 
 form {
     background-color: #fff;
-    padding: 20px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-width: 210px;
+    width: 100%;
+    max-width: 500px;
 }
 
-label, input {
+label {
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+input[type="text"], input[type="email"], input[type="password"], select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    color: #333;
+    transition: border-color 0.3s ease;
+    margin-bottom: 20px;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, select:focus {
+    border-color: #0056b3;
+    outline: none;
+}
+
+input[type="submit"] {
+    background-color: #0056b3;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
     display: block;
-    margin: 10px 0;
+    margin: auto;
+}
+
+input[type="submit"]:hover {
+    background-color: #003f8a;
 }
 
 #confirm_password:disabled {
