--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,10 @@ form {
 
 label {
     font-weight: 600;
-    margin-bottom: 5px;
+}
+
+input, select {
+    margin-top: 5px;
 }
 
 input[type="text"], input[type="email"], input[type="password"], select {
