--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ h2 {
     color: #0056b3;
 }
 
+/* Forms */
 form {
     background-color: #fff;
     padding: 40px;
@@ -101,7 +102,7 @@ input[type="submit"]:hover {
     background-color: #D3D3D3;
 }
 
-
+/* Nav elements in footer */
 .nav-container {
     display: flex;
     justify-content: space-between;
@@ -132,4 +133,54 @@ nav ul li a {
 nav ul li a.active {
     color: darkgrey;
     text-decoration: none;
+}
+
+/* About us */
+.faq {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+.h1-faq {
+    text-align: center;
+    color: #0056b3;
+    margin-bottom: 20px;
+}
+
+.faq-section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.faq-item {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 8px;
+
+    p {
+        text-align: justify;
+    }
+}
+
+.faq-question {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.faq-answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+    padding: 0 20px; 
+    border-left: 3px solid #007bff;
+}
+
+.faq-item:target .faq-answer {
+    max-height: 1000px; /* Set to a value higher than you expect any answer to be */
+    padding: 10px 20px; /* Restore padding when expanded */
 }
