Small faq changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ nav ul li a.active {
     text-decoration: none;
 }
 
-/* About us */
+/* FAQ */
 .faq {
     padding: 20px;
     background-color: #fff;
