--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
@@ -144,6 +144,9 @@ nav ul li a.active {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.about-us p {
+    text-align: justify;
+}
 
 .image-text-container {
     display: flex;
@@ -151,48 +154,40 @@ nav ul li a.active {
     align-items: flex-start;
 }
 
-.image-placeholder {
+.image-container {
     flex: 1;
-    background-color: #f4f4f4;
-    width: 50%;
-    size: 50%; /* Maintain aspect ratio (16:9) */
+    margin: 0px 20px;
     position: relative;
-}
 
-.image-placeholder::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    background-color: #ccc;
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100%; 
+        height: auto; 
+        object-fit: contain; 
+    }
 }
 
 .text-content {
     flex: 2;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two columns */
+    grid-template-rows: auto auto; /* Two rows, auto height */
     gap: 20px;
 }
 
-.text-content h2 {
-    color: #0056b3;
-    margin-bottom: 10px;
+.motto {
+    grid-column: 1 / -1; /* Span from first to last column */
 }
 
-.how-we-do {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 8px;
+.vision, .mission {
+    grid-column: span 1; /* Each takes up one column */
+    margin-right: 20px;
 }
 
-.how-we-do h2 {
-    color: #0056b3;
-    margin-bottom: 10px;
+.vision {
 }
+
 
 
 /* FAQ */
