--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@ nav ul li a.active {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
+    min-width: 800px;
     margin: 20px auto;
 }
 
