--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,8 +265,8 @@ nav ul li a.active {
 }
 
 .user img {
-    max-width: 150px;
-    max-height: 150px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     object-fit: cover;
 }
