--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,6 +371,49 @@ text-students{
 
 
 }
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+/*    center items*/
+
+}
+
+.info-container{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+        justify-content: space-between;
+
+
+
+}
+.title-text {
+    font-size: 1.5rem;
+    color: #0056b3;
+    margin-bottom: 20px;
+    text-align: center;
+
+}
+
+.profile-text {
+    font-size: 1.3rem;
+    color: #1e9113;
+    margin-bottom: 20px;
+    text-align: center;
+
+}
+.profile-pic {
+    display: block;
+    margin: 0 auto 1.5rem;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: 2px solid #ddd;
+}
+
 @media (max-width: 768px) {
     .user-container {
         justify-content: center;
