--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -13,7 +13,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #dddddd;
+    color: darkgrey;
     font-size: 16px;
     padding: 10px 15px;
     border-radius: 5px;
