--- a/aboutus.css
+++ b/aboutus.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
 
 * {
   margin: 0;
@@ -27,6 +27,7 @@ a {
 
 body {
   line-height: 1.6;
+  font-family: "Montserrat", sans-serif;
 }
 
 .btn {
@@ -172,10 +173,15 @@ h2 {
 
 .title {
   font-weight: 700;
-  font-size: 3.75rem;
+  font-size: 1.5rem;
   line-height: 1.3;
   overflow: hidden;
   font-family: "Roboto Serif", serif;
+  margin-bottom: 0.25rem;
+}
+
+.hero1 .title {
+  margin-bottom: 0.1rem;
 }
 
 .hero .btn-wrapper {
