--- a/assets/css/dashboards.css
+++ b/assets/css/dashboards.css
@@ -35,7 +35,7 @@ body {
 
 .main {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
